# ebpf-hpc

./: .gitignore  main.c  profile.c  trace.c
dftracer-ebpf/: CMakeLists.txt  cache_stat.py  dftracer_ebpf.c  dftracer_ebpf.h  io_ebpf.py  main.py  opensnoop.py  profile.c  profile.py  script.sh  targeted-time.py  test.c  test.cpp  test.csv  trace.py
docker/: bcc.Dockerfile
lima/: hari-ebpf.yaml
